tests/Core/negative/parsing/test003.jvc
def main := 1;
def main := 2;
